fix overflow on safari

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -614,12 +614,10 @@ a:hover
   left: 0px
   @include transition(all 300ms ease-in-out)
 
-
-
-
 .ingredients-menu
   @include transition(all 300ms ease-in-out)
   height: 100%
+  opacity: 0
   display: inline-block
   position: absolute
   right: 0px
@@ -679,6 +677,7 @@ a:hover
 
 .ingredients-menu-contents-slide
   min-height: 140px
+  opacity: 100
 
 @media (max-width: 480px)
   .ingredients-menu
